# kutinfo

./: CMakeLists.txt  README.md  UseLATEX.cmake  doublependulum.tex  main.cpp  miniwindow.h
